Testcases/pos/test16.jl
function main()
    begin
    end
    if true println("a")
        println("aa")
    else println("b")
    end
end

main()
